--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{page.title}}</title>
-  </head>
-  <body>
-    <h1>{{page.title}}</h1>
-    {{ content }}
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<head>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <title>{{ page.title }}</title>
+   <meta name="author" content="Mark Jones" />
+
+   <!-- syntax highlighting CSS -->
+   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+
+   <!-- Homepage CSS -->
+   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+
+   <!-- Typekit -->
+   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+</head>
+<body>
+
+<div class="site">
+  <div class="title">
+    <a href="/">Mark Jones</a>
+    <a class="extra" href="/">home</a>
+  </div>
+  
+  {{ content }}
+  
+  <div class="footer">
+    <div class="contact">
+      <p>
+        Mark Jones<br />
+        Founder of Reedhot Studios and Geordie Enterprises<br />
+        reedhotstudios@gmail.com
+      </p>
+    </div>
+    <div class="contact">
+      <p>
+        <a href="http://github.com/cricketgeek/">github.com/cricketgeek</a><br />
+        <a href="http://twitter.com/cricketgeek/">twitter.com/cricketgeek</a><br />
+        <a href="http://www.flickr.com/photos/geordiesunited/">flickr.com/photos/geordiesunited/</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+<a href="http://github.com/cricketgeek"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+
+
+</body>
 </html>
