--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,15 @@
 ---
 layout: default
-title: Reedhot Studios
 ---
+<div id="post">
+{{ content }}
+</div>
 
-<div id="home">
-  <h1>Blog Posts</h1>
+<div id="related">
+  <h2>Related Posts</h2>
   <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in site.related_posts limit:2 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-  
- 
-  
 </div>
