--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Mark Jones</a>
+    <a href="/">Reedhot Studios - Mark Jones</a>
     <a class="extra" href="/">home</a>
   </div>
   
