adding railsrankings contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
       <p>
         Mark Jones<br />
         Founder of Reedhot Studios and Geordie Enterprises<br />
+        Creator of <a href="http://railsrankings.com">RailsRankings</a><br />
         reedhotstudios@gmail.com
       </p>
     </div>
@@ -39,7 +40,8 @@
       <p>
         <a href="http://github.com/cricketgeek/">github.com/cricketgeek</a><br />
         <a href="http://twitter.com/cricketgeek/">twitter.com/cricketgeek</a><br />
-        <a href="http://www.flickr.com/photos/geordiesunited/">flickr.com/photos/geordiesunited/</a>
+        <a href="http://www.flickr.com/photos/geordiesunited/">flickr.com/photos/geordiesunited/</a><br />
+        <a href="http://railsrankings.com">railsrankings.com/mark-jones</a>
       </p>
     </div>
   </div>
